updated site icons

--- a/site/SF POPOS/index.html
+++ b/site/SF POPOS/index.html
@@ -2,14 +2,14 @@
 <html class="no-js" lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="description" content="corporate, business software, app, one page template" />
-<meta name="keywords" content="one page template, corporate, software, app, business, marketing, landing page, web marketing, internate marketing"/>
-<meta name="author" content="Tansh" />
+<meta name="description" content="" />
+<meta name="keywords" content=""/>
+<meta name="author" content="" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
-<title>Theflow by Tansh</title>
+<title>SF POPOS</title>
 
 <!--Fav and touch icons-->
-<link rel="shortcut icon" href="images/icons/favicon.ico">
+<!--<link rel="shortcut icon" href="images/icons/favicon.ico">-->
 <link rel="apple-touch-icon" href="images/icons/apple-touch-icon.png">
 <link rel="apple-touch-icon" sizes="72x72" href="images/icons/apple-touch-icon-72x72.png">
 <link rel="apple-touch-icon" sizes="114x114" href="images/icons/apple-touch-icon-114x114.png">
@@ -208,7 +208,7 @@ $('#contactform #message').val('');
   
   <!--feature one starts-->
   <div class="four columns">
-    <div class="icon_bg"><img src="images/icons/icon-1.png" width="92" height="92" alt="icon"></div>
+    <div class="icon_bg"><img src="images/icons/Art.png" width="50" height="50" alt="icon"></div>
     <h4>Art Installations</h4>
     <p>Don't miss out on these amazing works of local artists!</p>
   </div>
@@ -216,25 +216,25 @@ $('#contactform #message').val('');
   
   <!--feature two starts-->
   <div class="four columns">
-    <div class="icon_bg"><img src="images/icons/icon-2.png" width="92" height="92" alt="icon"></div>
+    <div class="icon_bg"><img src="images/icons/Music.png" width="20" height="20" alt="icon"></div>
     <h4>Music Performances</h4>
-    <p>What better way to celebrate the .</p>
+    <p>What better way to make use of these spaces than by taking in a show.</p>
   </div>
   <!--feature two ends--> 
   
   <!--feature three starts-->
   <div class="four columns">
-    <div class="icon_bg"><img src="images/icons/icon-3.png" width="92" height="92" alt="icon"></div>
-    <h4>Open Spaces</h4>
-    <p>Checkout these amazing views of The City by The Bay.</p>
+    <div class="icon_bg"><img src="images/icons/Dining.png" width="92" height="92" alt="icon"></div>
+    <h4>Lunch Destinations</h4>
+    <p>Grab your lunch and take it to these hidden destinations.</p>
   </div>
   <!--feature three ends--> 
   
   <!--feature four starts-->
   <div class="four columns">
-    <div class="icon_bg"><img src="images/icons/icon-4.png" width="92" height="92" alt="icon"></div>
-    <h4>Closed Spaces</h4>
-    <p>Check out these great places to step out from the rain or eat your lunch and take in some scenery.</p>
+    <div class="icon_bg"><img src="images/icons/Reading.png" width="92" height="92" alt="icon"></div>
+    <h4>Reading</h4>
+    <p>Need to get away? Grab a book and head to one of these locations.</p>
   </div>
   <!--feature four ends--> 
   
