Itty bitty changes

--- a/public/index.html
+++ b/public/index.html
@@ -184,9 +184,8 @@ $('#contactform #message').val('');
     <div id="slider_replace">
       <div class="eight columns"><img src="images/preview/iphone.png" alt="image"/></div>
       <div class="eight columns">
-        <h2>Get Head<strong>start</strong></h2>
+        <h2>Get a Head<strong>start</strong></h2>
         <p> There's a voice that keeps on calling me. Down the road, that's where I'll always be. Every stop I make, I make a new friend. Can't stay for long, just turn around and I'm gone again. Maybe tomorrow, I'll want to settle down, Until tomorrow, I'll just keep moving on.</p>
-        <a href="#" class="btn_googleplay"></a> </div>
     </div>
     <!--slider_replace ends--> 
     
