Adding more to come

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
 
 <!--slider scripts starts-->
 <link rel="stylesheet" media="screen" href="css/cslider.css"/>
+<link rel="stylesheet" media="screen" href="css/popos.css"/>
 <script src="js/jquery.cslider.js" type="text/javascript"></script>
 <script type="text/javascript">
 $(function() {
@@ -117,6 +118,8 @@ $('#contactform #message').val('');
 
 </head>
 <body>
+    <div id='construction'>more to come...</div>
+    <div id='overlay'></div>
 
 <!--header_wrapper starts-->
 <div id="header_wrapper" class="scroll-content">
