Walking map update

--- a/public/index-preview.html
+++ b/public/index-preview.html
@@ -46,8 +46,7 @@
           <div id='main' class='container'>
 
             <div class='teaser'>
-              <div><img src='images/teaser.png' alt='Popos preview' /></div>
-              <div id='teasertext'><a href='/map.html'>Preview our walking tour!</a></div>
+              <div><a href='map.html'><img src='images/adventure_start.png' alt='Adventure start' /></a></div>
             </div>
           
             <header>
