--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,10 @@
         <section id='top'>
 
           <div id='main' class='container'>
+
+            <div class='teaser'>
+              <div><a href='map.html'><img src='images/adventure_start.png' alt='Adventure start' /></a></div>
+            </div>
           
             <header>
               <img src="images/logo.png" alt="logo" width='400' height='95'>
@@ -114,7 +118,6 @@
         <script type='text/javascript' src='js/plugins.js'></script>
         <script type='text/javascript' src='js/main.js'></script>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
