--- a/public/map.html
+++ b/public/map.html
@@ -22,8 +22,12 @@
       <span class='detailview'>
         <div id='detailview'></div>
         <div class='arrows'>
-          <span class='leftArrow'><</span>
-          <span class='rightArrow'>></span>
+          <span class='leftArrow'>
+            <img src='images/left_arrow.png' />
+          </span>
+          <span class='rightArrow'>
+            <img src='images/right_arrow.png' />
+          </span>
         </div>
       </span>
 
@@ -38,6 +42,5 @@
     ga('create', 'UA-40308421-1', 'sfpopos.com');
     ga('send', 'pageview');
     </script>
-
   </body>
 </html>
