More responsive 'Start your adventure lead-in' on landing page

--- a/public/index.html
+++ b/public/index.html
@@ -42,11 +42,12 @@
 
         <section id='top'>
 
-          <div id='main' class='container'>
+          <div class='teaser'>
+            <span class='teaserhold'></span>
+            <span><a href='map.html'><img id='adventure_start' src='images/adventure_start.png' alt='Adventure start' /></a></span>
+          </div>
 
-            <div class='teaser'>
-              <div><a href='map.html'><img src='images/adventure_start.png' alt='Adventure start' /></a></div>
-            </div>
+          <div id='main' class='container'>
           
             <header>
               <img src="images/logo.png" alt="logo" width='400' height='95'>
