Add twitter to contact

--- a/public/index.html
+++ b/public/index.html
@@ -97,9 +97,10 @@
             <section id='contact'>
               <h2>Contact us</h2>
 
-              <p>
-                For more information contact us at info@sfpopos.com
-              </p>
+              <ul>
+                <li> Twitter: <a href='http://twitter.com/sfpopos'>@sfpopos</a> </li> 
+                <li> Email: info@sfpopos.com </li>
+              </ul>
             </section>
 
           </div>
