--- a/public/map.html
+++ b/public/map.html
@@ -11,28 +11,56 @@
 
     <!-- STAMEN -->
     <script type="text/javascript" src="http://maps.stamen.com/js/tile.stamen.js?v1.2.1"></script>
-    <link rel="stylesheet" media="screen" href="css/map.css" />
+
+    <link href='css/map.less' rel='stylesheet/less' type='text/css' />
+    <script src='js/vendor/less-1.3.3.min.js' type='text/javascript'></script>
 
     <script type='text/javascript' src='js/vendor/underscore-min.js'></script>
     <script type='text/javascript' src='js/popos.js'></script>
   </head>
   <body>
+
     <div>
       <span class='map' id='map'></span>
-      <span class='detailview'>
-        <div id='detailview'></div>
-        <div class='arrows'>
-          <span class='leftArrow'>
-            <img src='img/ui/left_arrow.png' />
-          </span>
-          <span class='rightArrow'>
-            <img src='img/ui/right_arrow.png' />
-          </span>
-        </div>
-      </span>
-
     </div>
+
+
+    <section id='detailview'>
+      <div class='title'>
+        <h2>Transamerica Redwood Park</h2>
+      </div>
+      <div class='photo'>
+        <img src='img/popos/redwood-park-02-640.jpg' width='640' height='300' alt='Transamerica Redwood Park' />
+      </div>
+      <div class='info'>
+        <div class='buttons'>
+          <div class='address'>
+            535 Washington St.
+          </div>
+          <div class='icons'>
+            <span class='icon-art'>art</span>
+            <span class='icon-outdoor'>outdoor</span>
+            <span class='icon-food'>food available</span>
+          </div>
+        </div>
+        <div class='description'>
+          <p>
+            Located at the base of the Transamerica Pyramid, this hidden oasis features a beautiful redwood grove, luscious ferns, and a tall water fountain, making the perfect escape from the bustling surroundings. The area also has an array of bronze sculptures, grassy patches, and ample seating. Take-out food vendors are nearby. This urban park is closed after office hours.
+          </p>
+        </div>
+      </div>
+      <div class='navigation'>
+        <span class='left-arrow'>
+          <img src='img/ui/left_arrow.png' />
+        </span>
+        <span class='right-arrow'>
+          <img src='img/ui/right_arrow.png' />
+        </span>
+      </div>
+    </section>
+
     <script type='text/javascript' src='js/map.js'></script>
+
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
