--- a/public/map.html
+++ b/public/map.html
@@ -1,6 +1,6 @@
-</html>
+<!DOCTYPE html>
+<html>
   <head>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 
     <!-- LEAFLET -->
     <link rel="stylesheet" href="css/leaflet.css" />
@@ -15,27 +15,27 @@
     <link href='css/map.less' rel='stylesheet/less' type='text/css' />
     <script src='js/vendor/less-1.3.3.min.js' type='text/javascript'></script>
 
-    <script type='text/javascript' src='js/vendor/underscore-min.js'></script>
-    <script type='text/javascript' src='js/popos.js'></script>
   </head>
   <body>
 
-    <div>
-      <span class='map' id='map'></span>
-    </div>
-
+    <div class='map' id='map'>
 
     <section id='detailview'>
+    </section>
+
+    <!-- MUSTACHE TEMPLATE -->
+    <section id='detailview-template'>
+    <script id='m_detailview' type='text/template'>
       <div class='title'>
-        <h2>Transamerica Redwood Park</h2>
+        <h2>{{name}}</h2>
       </div>
       <div class='photo'>
-        <img src='img/popos/redwood-park-02-640.jpg' width='640' height='300' alt='Transamerica Redwood Park' />
+        <img src='img/popos/{{pic_file}}' width='640' height='300' alt='{{name}}' />
       </div>
       <div class='info'>
         <div class='buttons'>
           <div class='address'>
-            535 Washington St.
+            {{popos_addr}}
           </div>
           <div class='icons'>
             <span class='icon-art'>art</span>
@@ -45,7 +45,7 @@
         </div>
         <div class='description'>
           <p>
-            Located at the base of the Transamerica Pyramid, this hidden oasis features a beautiful redwood grove, luscious ferns, and a tall water fountain, making the perfect escape from the bustling surroundings. The area also has an array of bronze sculptures, grassy patches, and ample seating. Take-out food vendors are nearby. This urban park is closed after office hours.
+            {{description}}
           </p>
         </div>
       </div>
@@ -57,8 +57,18 @@
           <img src='img/ui/right_arrow.png' />
         </span>
       </div>
-    </section>
+    </script>
+    </div>
+    <!-- // end Mustache template -->
 
+    <script src='//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js'></script>
+    <script>window.jQuery || document.write('<script src=\'js/vendor/jquery-1.9.1.min.js\'><\/script>')</script>
+    <!-- remove migrate once plugin code works with jQuery 1.9+ -->
+    <script src="http://code.jquery.com/jquery-migrate-1.2.0.js"></script>
+    <script src='js/vendor/mustache.js' type='text/javascript'></script>
+
+    <script type='text/javascript' src='js/vendor/underscore-min.js'></script>
+    <script type='text/javascript' src='js/popos.js'></script>
     <script type='text/javascript' src='js/map.js'></script>
 
     <script>
