--- a/public/map.html
+++ b/public/map.html
@@ -47,9 +47,21 @@
               {{popos_addr}}
             </div>
             <div class='icons'>
-              <span class='icon-art'>art</span>
-              <span class='icon-outdoor'>outdoor</span>
-              <span class='icon-food'>food available</span>
+              {{#art}}
+                <span class='icon-art'>art</span>
+              {{/art}}
+              {{#outdoor}}
+                <span class='icon-outdoor'>outdoor</span>
+              {{/outdoor}}
+              {{#food}}
+                <span class='icon-food'>food available</span>
+              {{/food}}
+              {{#hours}}
+                <span class='icon-open'>open at all times</span>
+              {{/hours}}
+              {{#views}}
+                <span class='icon-views'>views</span>
+              {{/views}}
             </div>
           </div>
           <div class='description'>
@@ -66,8 +78,9 @@
 
     <script src='//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js'></script>
     <script>window.jQuery || document.write('<script src=\'js/vendor/jquery-1.9.1.min.js\'><\/script>')</script>
+    <script src='http://code.jquery.com/ui/1.10.2/jquery-ui.js'></script>
     <!-- remove migrate once plugin code works with jQuery 1.9+ -->
-    <script src="http://code.jquery.com/jquery-migrate-1.2.0.js"></script>
+    <!-- <script src="http://code.jquery.com/jquery-migrate-1.2.0.js"></script> -->
     <script src='js/vendor/mustache.js' type='text/javascript'></script>
 
     <script type='text/javascript' src='js/vendor/underscore-min.js'></script>
