--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
 
     <section id='top'>
 
-      <div class='teaser'>
+      <div class='teaser' style='display: none;'>
         <span class='teaserhold'></span>
         <span><a href='map.html'><img id='adventure_start' src='img/adventure_start.png' alt='Adventure start' /></a></span>
       </div>
