Temporary fix to map CSS not loading fast enough (via LESS), causing map to display incorrectly on Firefox. Also fix for map navigation buttons. Closes #8

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
 
     <section id='top'>
 
-      <div class='teaser' style='display: none;'>
+      <div class='teaser'>
         <span class='teaserhold'></span>
         <span><a href='map.html'><img id='adventure_start' src='img/adventure_start.png' alt='Adventure start' /></a></span>
       </div>
