--- a/public/map.html
+++ b/public/map.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset='utf-8'>
+
+    <title>SF POPOS - Map</title>
 
     <!-- LEAFLET -->
     <link rel="stylesheet" href="css/leaflet.css" />
@@ -15,8 +18,27 @@
     <link href='css/map.less' rel='stylesheet/less' type='text/css' />
     <script src='js/vendor/less-1.3.3.min.js' type='text/javascript'></script>
 
+    <style type='text/css'>
+
+      html, body {
+        padding: 0;
+        margin: 0;
+        width: 100%;
+        height: 100%;
+      }
+
+      #map {
+        width: 100%;
+        height: 100%;
+        position: absolute !important; // need !mportant for firefox
+      }
+
+    </style>
+
   </head>
   <body>
+
+    <section id='map'></section>
 
     <section id='detailview'>
       <div id='place'>
@@ -33,7 +55,7 @@
     </section>
 
     <!-- MUSTACHE TEMPLATE -->
-    <section id='place-template'>
+    <section id='place-template' style='display: none'>
     <script id='m_place' type='text/template'>
         <div class='title'>
           <h2>{{name}}</h2>
@@ -71,10 +93,8 @@
           </div>
         </div>
     </script>
-    </div>
+    </section>
     <!-- // end Mustache template -->
-
-    <div class='map' id='map'>
 
     <script src='//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js'></script>
     <script>window.jQuery || document.write('<script src=\'js/vendor/jquery-1.9.1.min.js\'><\/script>')</script>
