Add mapbox tile layer as default, with fallback to watercolor map if map.html is passed ?m=watercolor query string.

--- a/public/map.html
+++ b/public/map.html
@@ -5,12 +5,12 @@
 
     <title>SF POPOS - Map</title>
 
-    <!-- LEAFLET -->
-    <link rel="stylesheet" href="css/leaflet.css" />
+    <!-- MAPBOX -->
+    <link href='http://api.tiles.mapbox.com/mapbox.js/v1.0.2/mapbox.css' rel='stylesheet' />
     <!--[if lte IE 8]>
-      <link rel="stylesheet" href="leaflet-0.5.1/leaflet.ie.css" />
+      <link href='http://api.tiles.mapbox.com/mapbox.js/v1.0.2/mapbox.ie.css' rel='stylesheet' />
     <![endif]-->
-    <script src="js/vendor/leaflet.js"></script>
+    <script src='http://api.tiles.mapbox.com/mapbox.js/v1.0.2/mapbox.js'></script>
 
     <!-- STAMEN -->
     <script type="text/javascript" src="http://maps.stamen.com/js/tile.stamen.js?v1.2.1"></script>
