more responsive layout for main page. Works better for multiple browser widths and mobile. fixes issue #11

--- a/public/index.html
+++ b/public/index.html
@@ -43,8 +43,8 @@
     <section id='top'>
 
       <div class='teaser'>
-        <span class='teaserhold'></span>
-        <span><a href='map.html'><img id='adventure_start' src='img/adventure_start.png' alt='Adventure start' /></a></span>
+      <!--   <span class='teaserhold'></span> -->
+        <span class='maplink'><a href='map.html'><img id='adventure_start' src='img/adventure_start.png' alt='Adventure start' /></a></span>
       </div>
 
       <div id='main' class='container'>
@@ -52,7 +52,7 @@
         <header>
           <img src="img/logo.png" alt="logo" width='400' height='95'>
 
-          <h1>Find San Francisco's coolest spaces.</h1>
+          <h1 id="topheadertext">Find San Francisco's coolest spaces.</h1>
         </header>
 
         <section id='about'>
