added follow on twitter button. better width scaling. changed 'nature calls' to 'beautiful views'

--- a/public/index_june2013.html
+++ b/public/index_june2013.html
@@ -57,6 +57,7 @@
     <section id='routes' class='container'>
         <h1>explore a route</h1>
       <div class='column-box'>
+        <!-- <div id='routes-left'> -->
         <section class='column'>
           <a href= "routes/popos.html">
             <img src = "img/ui/popos_icon.png">
@@ -72,11 +73,14 @@
             <h2>Let's get physical</h2>
           </a>
         </section>
-        <div class = 'divider'></div>
+      <!-- </div> -->
+        <div class = 'divider' id="middle-divider"></div>
+        <span class='stretch' id='middlestretch'></span>
+        <!-- <div id = 'routes-right'> -->
         <section class='column'>
-          <a href= "routes/nature_calls.html">
+          <a href= "routes/views.html">
             <img src = "img/ui/nature_calls.png">
-            <h2>Nature Calls</h2>
+            <h2>Beautiful Views</h2>
           </a>
         </section>
         <div class = 'divider'></div>
@@ -86,6 +90,7 @@
             <h2>Kids Corner</h2>
           </a>
         </section>
+      <!-- </div> -->
         <span class='stretch'></span>
       </div>
     </section>    
@@ -112,7 +117,11 @@
           <img src = "img/ui/twitter.png" alt='twitter_bird'>
           <h2>@urban_wander</h2>
           <div id='tweets'></div>
+          <a href="https://twitter.com/urban_wander" class="twitter-follow-button" data-show-count="false">Follow @urban_wander</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
         </section>
+
+        <span class='stretch' id='middlestretch2'></span>
         <section id='signup' class='column'>
           <h2>Keep me<br>updated</h2>
           <!-- Begin MailChimp Signup Form -->
