--- a/public/map_new.html
+++ b/public/map_new.html
@@ -104,8 +104,9 @@
     <script src='js/vendor/mustache.js' type='text/javascript'></script>
 
     <script type='text/javascript' src='js/vendor/underscore-min.js'></script>
-    <script type='text/javascript' src='js/popos.js'></script> 
-    <script type='text/javascript' src='js/map.js'></script>
+    <!--<script type='text/javascript' src='js/popos.js'></script> -->
+    <script type='text/javascript' src='js/popos_gdoc.js'></script>
+    <script type='text/javascript' src='js/map_new.js'></script>
 
     <script src="http://spreadsheets.google.com/feeds/list/0Aj3Ad9AGomNCdGstYUtTUlZzQWpBZXhraFViQU51aVE/1/public/values?alt=json-in-script&amp;callback=initMap"></script>
     <script>
