--- a/public/map_new.html
+++ b/public/map_new.html
@@ -15,7 +15,7 @@
     <!-- STAMEN -->
     <script type="text/javascript" src="http://maps.stamen.com/js/tile.stamen.js?v1.2.1"></script>
 
-    <link href='css/map.less' rel='stylesheet/less' type='text/css' />
+    <link href='css/map_new.less' rel='stylesheet/less' type='text/css' />
     <script src='js/vendor/less-1.3.3.min.js' type='text/javascript'></script>
 
     <style type='text/css'>
@@ -61,7 +61,7 @@
           <h2>{{name}}</h2>
         </div>
         <div class='photo'>
-          <img src='{{photo_url}}' width='100%' height='100%' alt='{{name}}' />
+          <img src='{{photo_url}}' width='100%' height='100%' alt='{{name}}' onError="this.src='img/popos/no-photo.jpg';" />
         </div>
         <div class='info'>
           <div class='buttons'>
