main page links to maps, app store coming soon graphic, twitter bird links to twitter. changed url to index_new.html

--- a/public/map_new.html
+++ b/public/map_new.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
 
-    <title>SF POPOS - Map</title>
+    <title>Urban Wander - Map</title>
 
     <!-- MAPBOX -->
     <link href='http://api.tiles.mapbox.com/mapbox.js/v1.0.2/mapbox.css' rel='stylesheet' />
