--- a/public/index_new.html
+++ b/public/index_new.html
@@ -11,7 +11,7 @@
       <meta name='description' content=''>
       <meta name='viewport' content='width=device-width'>
 
-      <link href='css/june2013.less' rel='stylesheet/less' type='text/css' />
+      <link href='css/index_new.less' rel='stylesheet/less' type='text/css' />
       <script src='js/vendor/less-1.3.3.min.js' type='text/javascript'></script>
 
       <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -44,13 +44,13 @@
     <section id='top' class='container'>
         <div id='nav'>
           <a href = "#about">about</a>
-          <a href = "contact.html">contact</a>
+          <a href = "mailto:info@urbanwander.org">contact</a>
         </div>
         <header>
            <img src="img/urbanwander_banner.jpg" alt="banner">
-           <a href = "">
-          <img id="appimage" src="img/getapp.png" alt = "get the app!">
-        </a>
+           <!-- <a href = ""> -->
+          <img id="appimage" src="img/app_coming_soon.png" alt = "app coming soon!">
+        <!-- </a> -->
         </header>
     </section>
 
@@ -59,7 +59,7 @@
       <div class='column-box'>
         <!-- <div id='routes-left'> -->
         <section class='column'>
-          <a href= "routes/popos.html">
+          <a href= "map_new.html?routeID=1">
             <img src = "img/ui/popos_icon.png">
             <h2>POPOS
               <br><span class='route-subhead'> [privately owned public open spaces] </span>
@@ -68,7 +68,7 @@
         </section>
         <div class = 'divider'></div>
         <section class='column'>
-          <a href= "routes/get_physical.html">
+          <a href= "map_new.html?routeID=5">
             <img src = "img/ui/get_physical.png">
             <h2>Let's get physical</h2>
           </a>
@@ -78,14 +78,14 @@
         <span class='stretch' id='middlestretch'></span>
         <!-- <div id = 'routes-right'> -->
         <section class='column'>
-          <a href= "routes/views.html">
+          <a href= "map_new.html?routeID=6">
             <img src = "img/ui/nature_calls.png">
             <h2>Beautiful Views</h2>
           </a>
         </section>
         <div class = 'divider'></div>
         <section class='column'>
-          <a href= "routes/kids.html">
+          <a href= "map_new.html?routeID=7">
             <img src = "img/ui/kids.png">
             <h2>Kids Corner</h2>
           </a>
@@ -114,8 +114,9 @@
           </ul>
         </section>
         <section id='twitter' class='column'>
+          <a href="https://twitter.com/urban_wander" target='_blank' class='no-ul'>
           <img src = "img/ui/twitter.png" alt='twitter_bird'>
-          <h2>@urban_wander</h2>
+          <h2>@urban_wander</h2> </a>
           <div id='tweets'></div>
           <a href="https://twitter.com/urban_wander" class="twitter-follow-button" data-show-count="false">Follow @urban_wander</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
