--- a/public/map_new.html
+++ b/public/map_new.html
@@ -37,7 +37,23 @@
 
   </head>
   <body>
-
+    <nav>
+      <a href='/' title="Home Page">
+        <img src="img/ui/home.png">
+      </a>
+      <a href='?routeID=1' title="POPOS">
+        <img src="img/ui/popos_icon.png">
+      </a>
+      <a href='?routeID=5' title="Let's get physical">
+        <img src="img/ui/get_physical.png">
+      </a>
+      <a href='?routeID=6' title="Beautiful Views">
+        <img src="img/ui/nature_calls.png">
+      </a>
+      <a href='?routeID=7' title="Kid's Corner">
+        <img src="img/ui/kids.png">
+      </a>
+    </nav>
     <section id='map'></section>
 
     <section id='detailview'>
@@ -108,7 +124,7 @@
     <script type='text/javascript' src='js/popos_new.js'></script>
     <script type='text/javascript' src='js/map_new.js'></script>
 
-  <!-- <script src="http://spreadsheets.google.com/feeds/list/0AlbltfEyPSDNdDJkVUNuS1d1ZGktZE1jdmlFbERjbmc/1/public/values?alt=json-in-script&amp;callback=initMap"></script> -->
+    <!-- <script src="http://spreadsheets.google.com/feeds/list/0AlbltfEyPSDNdDJkVUNuS1d1ZGktZE1jdmlFbERjbmc/1/public/values?alt=json-in-script&amp;callback=initMap"></script> -->
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
