home button and route name, everything in futura

--- a/public/map_new.html
+++ b/public/map_new.html
@@ -58,7 +58,9 @@
     <section id='place-template' style='display: none'>
     <script id='m_place' type='text/template'>
         <div class='title'>
+        <a href='index_new.html' id='home'> <img src='img/ui/home.png' alt='Home'> </a>
           <h2>{{name}}</h2>
+          <div class='routename'>{{route_name}}</div>
         </div>
         <div class='photo'>
           <img src='{{photo_url}}' width='100%' height='100%' alt='{{name}}' onError="this.src='img/popos/no-photo.jpg';" />
