--- a/public/map.html
+++ b/public/map.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
 
-    <title>SF POPOS - Map</title>
+    <title>Urban Wander - Map</title>
 
     <!-- MAPBOX -->
     <link href='http://api.tiles.mapbox.com/mapbox.js/v1.0.2/mapbox.css' rel='stylesheet' />
@@ -58,15 +58,17 @@
     <section id='place-template' style='display: none'>
     <script id='m_place' type='text/template'>
         <div class='title'>
+        <a href='index.html' id='home'> <img src='img/ui/home.png' alt='Home'> </a>
           <h2>{{name}}</h2>
+          <div class='routename'>{{route_name}}</div>
         </div>
         <div class='photo'>
-          <img src='img/popos/{{pic_file}}' width='100%' height='100%' alt='{{name}}' />
+          <img src='{{photo_url}}' alt='{{name}}' onError="this.src='img/popos/no-photo.jpg';" />
         </div>
         <div class='info'>
           <div class='buttons'>
             <div class='address'>
-              {{popos_addr}}
+              {{address}}
             </div>
             <div class='icons'>
               {{#art}}
@@ -78,9 +80,9 @@
               {{#food}}
                 <span class='icon-food'>food available</span>
               {{/food}}
-              {{#hours}}
+              {{#open_hours}}
                 <span class='icon-open'>open at all times</span>
-              {{/hours}}
+              {{/open_hours}}
               {{#views}}
                 <span class='icon-views'>views</span>
               {{/views}}
@@ -104,10 +106,11 @@
     <script src='js/vendor/mustache.js' type='text/javascript'></script>
 
     <script type='text/javascript' src='js/vendor/underscore-min.js'></script>
-    <script type='text/javascript' src='js/popos.js'></script> 
+    <!--<script type='text/javascript' src='js/popos.js'></script> -->
+    <script type='text/javascript' src='js/popos.js'></script>
     <script type='text/javascript' src='js/map.js'></script>
 
-    <script src="http://spreadsheets.google.com/feeds/list/0Aj3Ad9AGomNCdGstYUtTUlZzQWpBZXhraFViQU51aVE/1/public/values?alt=json-in-script&amp;callback=initMap"></script>
+  <!-- <script src="http://spreadsheets.google.com/feeds/list/0AlbltfEyPSDNdDJkVUNuS1d1ZGktZE1jdmlFbERjbmc/1/public/values?alt=json-in-script&amp;callback=initMap"></script> -->
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
