--- a/public/old_site/map.html
+++ b/public/old_site/map.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
 
-    <title>Urban Wander - Map</title>
+    <title>SF POPOS - Map</title>
 
     <!-- MAPBOX -->
     <link href='http://api.tiles.mapbox.com/mapbox.js/v1.0.2/mapbox.css' rel='stylesheet' />
@@ -15,7 +15,7 @@
     <!-- STAMEN -->
     <script type="text/javascript" src="http://maps.stamen.com/js/tile.stamen.js?v1.2.1"></script>
 
-    <link href='css/map_new.less' rel='stylesheet/less' type='text/css' />
+    <link href='css/map.less' rel='stylesheet/less' type='text/css' />
     <script src='js/vendor/less-1.3.3.min.js' type='text/javascript'></script>
 
     <style type='text/css'>
@@ -58,17 +58,15 @@
     <section id='place-template' style='display: none'>
     <script id='m_place' type='text/template'>
         <div class='title'>
-        <a href='index_new.html' id='home'> <img src='img/ui/home.png' alt='Home'> </a>
           <h2>{{name}}</h2>
-          <div class='routename'>{{route_name}}</div>
         </div>
         <div class='photo'>
-          <img src='{{photo_url}}' width='100%' height='100%' alt='{{name}}' onError="this.src='img/popos/no-photo.jpg';" />
+          <img src='img/popos/{{pic_file}}' width='100%' height='100%' alt='{{name}}' />
         </div>
         <div class='info'>
           <div class='buttons'>
             <div class='address'>
-              {{address}}
+              {{popos_addr}}
             </div>
             <div class='icons'>
               {{#art}}
@@ -80,9 +78,9 @@
               {{#food}}
                 <span class='icon-food'>food available</span>
               {{/food}}
-              {{#open_hours}}
+              {{#hours}}
                 <span class='icon-open'>open at all times</span>
-              {{/open_hours}}
+              {{/hours}}
               {{#views}}
                 <span class='icon-views'>views</span>
               {{/views}}
@@ -106,11 +104,10 @@
     <script src='js/vendor/mustache.js' type='text/javascript'></script>
 
     <script type='text/javascript' src='js/vendor/underscore-min.js'></script>
-    <!--<script type='text/javascript' src='js/popos.js'></script> -->
-    <script type='text/javascript' src='js/popos_new.js'></script>
-    <script type='text/javascript' src='js/map_new.js'></script>
+    <script type='text/javascript' src='js/popos.js'></script> 
+    <script type='text/javascript' src='js/map.js'></script>
 
-  <!-- <script src="http://spreadsheets.google.com/feeds/list/0AlbltfEyPSDNdDJkVUNuS1d1ZGktZE1jdmlFbERjbmc/1/public/values?alt=json-in-script&amp;callback=initMap"></script> -->
+    <script src="http://spreadsheets.google.com/feeds/list/0Aj3Ad9AGomNCdGstYUtTUlZzQWpBZXhraFViQU51aVE/1/public/values?alt=json-in-script&amp;callback=initMap"></script>
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
