good article link

--- a/public/index.html
+++ b/public/index.html
@@ -109,6 +109,7 @@
           <img src = "img/ui/news.png" alt='news'>
           <h2>news</h2>
           <ul>
+            <li><a href="http://www.good.is/posts/urban-wander-curating-a-city-s-hidden-public-spaces">What's your favorite hidden urban oasis? This app will help you find it</a></li>
             <li><a href="http://www.fastcoexist.com/1681937/a-new-way-to-explore-some-san-franciscos-hidden-public-spaces">A New Way To Explore Some of San Francisco’s Hidden Public Spaces</a></li>
             <li><a href='http://blogs.esri.com/esri/arcgis/2013/04/22/discover-san-francisco-hackathon/'>Discover San Francisco Hackathon</a></li>
           </ul>
