minor visual fixes, fixed json file for filter errors, better no photo placeholder

--- a/public/map.html
+++ b/public/map.html
@@ -63,7 +63,7 @@
           <div class='routename'>{{route_name}}</div>
         </div>
         <div class='photo'>
-          <img src='{{photo_url}}' alt='{{name}}' onError="this.src='img/popos/no-photo.jpg';" />
+          <img src='{{photo_url}}' alt='{{name}}' onError="this.src='img/popos/no_photo.png';" />
         </div>
         <div class='info'>
           <div class='buttons'>
