start on new frontend design

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       <link href="http://cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
       <link href='http://fonts.googleapis.com/css?family=Didact+Gothic' rel='stylesheet' type='text/css'>
       <style type="text/css">
-        #mc_embed_signup{background: transparent; clear:left; font:14px Helvetica,Arial,sans-serif; }
+        /*#mc_embed_signup{background: transparent; clear:left; font:14px Helvetica,Arial,sans-serif; }*/
         #mc_embed_signup form {
           padding: 0;
         }
@@ -42,7 +42,12 @@
     <![endif]-->
 
     <section id='top' class='container'>
+        <h1 class="uw-title">urban wander</h1>
+        <h3 class="tagline">discover. explore. wander.</h1>
         <div id='nav'>
+          <a href = "index.html">home</a>
+          <a href = "map.html">adventures</a>
+          <a href = "#news">news</a>
           <a href = "#about">about</a>
           <a href = "mailto:info@urbanwander.org">contact</a>
         </div>
@@ -55,7 +60,7 @@
     </section>
 
     <section id='routes' class='container'>
-        <h1>explore a route</h1>
+        <h1>click to choose your adventure!</h1>
       <div class='column-box'>
         <!-- <div id='routes-left'> -->
         <section class='column'>
@@ -93,15 +98,19 @@
       <!-- </div> -->
         <span class='stretch'></span>
       </div>
-    </section>    
+    </section> 
+
     <section id='about' class='container'>
+      <img class='howto-img' src="img/iphone_howto.png">
       <header>
+        <div id="about-text"
         <img src="img/ui/about.png" alt="about">
         <h1>About</h1>
       </header>
       <p>
             For the urban explorer interested in discovering unique, hidden, beautiful public spaces in San Francisco. Get off the beaten track. Discover POPOS (privately owned public open spaces), parklets, stairwells, playgrounds and other local secrets within San Francisco. Take a curated adventure and immerse yourself in art, exercise, nature or play. 
       </p>
+    </div>
     </section>
     <section id='news_and_updates' class='container'>
       <div class='column-box'>
@@ -124,8 +133,10 @@
         </section>
 
         <span class='stretch' id='middlestretch2'></span>
+        
         <section id='signup' class='column'>
-          <h2>Keep me<br>updated</h2>
+          <img src = "img/ui/mail.png" alt='keep me updated'>
+          <h2>Keep me updated</h2>
           <!-- Begin MailChimp Signup Form -->
           <div id="mc_embed_signup">
           <form action="http://sfpopos.us7.list-manage.com/subscribe/post?u=8519924cb9130140d935b7dbe&amp;id=8178b2db21" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
