--- a/public/index.html
+++ b/public/index.html
@@ -58,8 +58,8 @@
           <h3 class="tagline">discover. explore. wander.</h3>
         </div>
         <div id='nav'>
-          <a href = "index.html" id="homelink">home</a>
-          <a href = "#adventures">adventures</a>
+          <a href = "index.html" id="home-link">home</a>
+          <a href = "#adventures" id="adventures-link">adventures</a>
           <a href = "#news">news</a>
           <a href = "#about">about</a>
           <a href = "mailto:info@urbanwander.org">contact</a>
@@ -88,7 +88,7 @@
     <section id='place-template' style='display: none'>
     <script id='m_place' type='text/template'>
         <div class='title'>
-        <a href='index.html' id='home'> <img src='img/ui/home.png' alt='Home'> </a>
+        <!--<a href='index.html' id='home'> <img src='img/ui/home.png' alt='Home'> </a> -->
           <h2>{{name}}</h2>
           <div class='routename'>{{route_name}}</div>
         </div>
@@ -178,7 +178,7 @@
     </section> 
 
     <section id='howto-and-about' class='container'>
-      <img class='howto-img' src="img/iphone_howto.png">
+      <img class='howto-img' src="img/uw_iphone_info.jpg">
         <div id="about">
       <!-- <header> -->
         <!-- <img src="img/ui/about.png" alt="about"> -->
