--- a/public/index.html
+++ b/public/index.html
@@ -54,22 +54,29 @@
     <section id='top' class='container'>
 
         <div class = title-div>
-          <h1 class="uw-title">urban wander</h1>
-          <h3 class="tagline">discover. explore. wander.</h3>
+          <!-- <h1 class="uw-title">urban wander</h1> -->
+          <!-- <h3 class="tagline">discover. explore. wander.</h3> -->
+          <img src="img/uw_title.png">
         </div>
-        <div id='nav'>
-          <a href = "index.html" id="home-link">home</a>
-          <a href = "#adventures" id="adventures-link">adventures</a>
-          <a href = "#news">news</a>
-          <a href = "#about">about</a>
-          <a href = "mailto:info@urbanwander.org">contact</a>
+        <ul id='nav'>
+          <li><a href = "index.html" id="home-link">home</a></li>
+          <li><a href = "#adventures" id="adventures-link">adventures</a>
+            <ul>
+              <li>POPOS</li>
+              <li>Beautiful views</li>
+              <li>Kids corner</li>
+              <li>Let's Get Physical</li>
+            </ul>
+          </li>
+          <li><a href = "#news">news</a></li>
+          <li><a href = "#about">about</a></li>
+          <li><a href = "mailto:info@urbanwander.org">contact</a></li>
         </div>
       </section>
 
 
     <section id="map-container" class="container" style="display:none">
-
-    <section id='map'></section>
+      <div id="sidebar">
     <section id='detailview'>
       <div id='place'>
         <!-- placeholder for place info -->
@@ -83,6 +90,7 @@
         </span>
       </div>
     </section>
+  </div>
 
     <!-- MUSTACHE TEMPLATE -->
     <section id='place-template' style='display: none'>
@@ -126,6 +134,9 @@
         </div>
     </script>
     </section>
+
+    <section id='map'></section>
+
     </section>
     <section id="banner" class="container">
         <header>
