--- a/public/map.html
+++ b/public/map.html
@@ -28,9 +28,9 @@
       }
 
       #map {
-        width: 100%;
-        height: 100%;
-        position: absolute !important; // need !mportant for firefox
+        //width: 100%;
+        //height: 100%;
+        //position: absolute !important; // need !mportant for firefox
       }
 
     </style>
